# clipod

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  readme.md
db/: CMakeLists.txt  main.cpp
include/clipod/: album.h  artist.h  brain.h  database.h  databaseUtil.h  decoder.h  playback.h  playbackControls.h  playbackThread.h  queue.h  settings.h  soundBuffer.h  timer.h  track.h
memtest/: CMakeLists.txt  main.cpp
tui/: CMakeLists.txt  albumMenu.cpp  albumMenu.h  artistMenu.cpp  artistMenu.h  binaryButton.cpp  binaryButton.h  fileBrowser.cpp  fileBrowser.h  main.cpp  mainMenu.cpp  mainMenu.h  nowPlaying.cpp  nowPlaying.h  playbackControls.cpp  playbackControls.h  pressedButton.cpp  pressedButton.h  queue.cpp  queue.h  seekbar.cpp  seekbar.h  settingsMenu.cpp  settingsMenu.h  trackMenu.cpp  trackMenu.h  uiLoop.cpp  uiLoop.h
